sap/5.2/modules/ROOT/pages/sap-connector-reference.adoc
= SAP Connector 5.2 Reference - Mule 4



Anypoint Connector for SAP (SAP Connector) enables the integration of data to and
from external systems based on SAP NetWeaver.

NOTE: Starting with version 5.0, SAP Connector also supports connecting to an on-premises instance of SAP S/4HANA.

== Limitations

* SNC is not supported for use in Mule apps that deploy SAP Connector in CloudHub and Anypoint Runtime Fabric.
* Multiple applications with the same PROGRAM_ID, GATEWAY_SERVICE, and GATEWAY_HOST deployed on the same Mule runtime engine does not work because the JCoLibrary does not allow the creation of two servers connecting to instances that have the same PROGRAM_ID, GATEWAY_SERVICE, and GATEWAY_HOST. If you attempt to create two servers with the same PROGRAM_ID, GATEWAY_SERVICE, and GATEWAY_HOST, only one server is created. +
Workarounds:
. Use two different Mule runtime engines.
. Use the same PROGRAM_ID but with two different GATEWAY_HOSTs.
* SAP Connector was not tested using a message server configuration connected to more than one application server. Therefore, this feature is not currently supported.


== Configurations
---
[[sap]]
=== Default Configuration


Default configuration for SAP extension outbound elements.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<sap_certificate, Certificate>>
* <<sap_simple-connection-provider, Simple Connection Provider>>
 | The connection types to provide to this configuration. | | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
| Encoding a| String |  Canonical name of the encoding. See Oracle's supported encodings at `+https://docs.oracle.com/javase/8/docs/technotes/guides/intl/encoding.doc.html+`. |  |
| Default Idocument Version a| String |  Default IDoc version. |  0 |
| Disable Jco Internal Cache a| Boolean |  Flag that indicates whether to use the JCo internal cache. |  `false` |
| Evaluate Response Flag a| Boolean |  Flag that indicates if an error response should throw an exception or let the user handle it as another result. |  `false` |
| Log Trace Flag a| Boolean |  Flag that indicates whether to log the trace on the Mule server. |  `false` |
| Use SAP Format a| Boolean |  This parameter was added to support the Mule 3 format for returning SAP values. Used in the JCoToBusinessObjectParser class when parsing a JCoField.

* `true` - Specifies that values should be returned as strings with the original SAP format.
* `false` - Original values are converted to the corresponding Java objects, serialized, and returned.
|  `false` |
|===

==== Connection Types
[[sap_certificate]]
===== Certificate

Connection provider that relies on an X509 certificate to authenticate the user.

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| SAP system number a| String |  The two-digit system number (sysnr) of the SAP system. |  | x
| SAP client ID a| String |  Three-digit client number. Leading zeros are preserved if they appear in the number. |  | x
| Destination Name a| String |  Identifier of the destination generated by this connector. If none is set, then a random value is created. |  |
| Login language a| String |  The language code used by the connector. The language determines the code page used for communicating between the SAP adapter and the application server. |  EN |
| Extended Properties a| Object |  Use to pass in all the database server-specific connection parameters. |  |
| X.509 Certificate a| String |  Path to the X.509 certificate. This is required when the connector is working as a client. |  |
| Application server host a| String |  The host of the SAP application server. |  |
| Message server configuration a| <<MessageServer>> |  The configuration for message server usage. |  |
| Enable RFC tracing on server a| Boolean |  Enable or disable RFC trace on the server. |  `false` |
| Enable CPIC tracing on server a| Enumeration, one of:

** INHERIT
** NO_TRACING
** LEVEL_1
** LEVEL_2
** LEVEL_3 |  Enable/disable RFC trace on the server. |  |
| Reconnection a| <<Reconnection>> |  When an application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===
[[sap_simple-connection-provider]]
===== Simple Connection Provider


Connection provider that connects using a username and password.

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| SAP system number a| String |  The two-digit system number (sysnr) of the SAP system. |  | x
| SAP client ID a| String |  Three-digit client number. Leading zeros are preserved if they appear in the number. |  | x
| Destination Name a| String |  Identifier of the destination generated by this connector. If none is set, then a random value is created. |  |
| Login language a| String |  The language code used by the connector. The language determines the code page used for communicating between the SAP Adapter and the application server. |  EN |
| Extended Properties a| Object |  Use to pass in all the database server-specific connection parameters. |  |
| Username a| String |  The username the connector uses to log in to SAP. |  | x
| Password a| String |  The password associated with the login username. |  | x
| Application server host a| String |  The host of the SAP application server. |  |
| Message server configuration a| <<MessageServer>> |  The configuration for message server usage. |  |
| Enable RFC tracing on server a| Boolean |  Enable or disable RFC trace on the server. |  `false` |
| Enable CPIC tracing on server a| Enumeration, one of:

** INHERIT
** NO_TRACING
** LEVEL_1
** LEVEL_2
** LEVEL_3 |  Enable or disable RFC trace on the server. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

== Sources

* <<document-listener>>
* <<function-listener>>

[[document-listener]]
=== Document Listener
`<sap:document-listener>`

Source that listens for incoming IDocs.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Gateway Host a| String |  Name of the host running the gateway server. |  | x
| Gateway Service a| String |  Either the name or service port for the gateway service of the SAP system. |  | x
| Program ID a| String |  SAP system program ID that is registered on the gateway. Must be unique for the given gateway. |  | x
| Connection Count a| Number |  The number of connections to register on the gateway. |  1 |
| Idoc Type Filter Regex a| String |  Expression to filter by type, all incoming IDocs. |  |
| IDoc Render Options a| <<IDocRenderParameterGroup>> | IDoc rendering options| |
| Transactional Action a| Enumeration, one of:

** ALWAYS_BEGIN
** NONE |  The type of beginning action that sources can take regarding transactions. |  NONE |
| Transaction Type a| Enumeration, one of:

** LOCAL
** XA |  The type of transaction to create. Availability depends on Mule version. |  LOCAL |
| Primary Node Only a| Boolean |  Whether this source should only be executed on the primary node when running in a cluster. |  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior.  |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<SapAttributes>>
|===

=== For Configurations
* <<sap>>

[[function-listener]]
=== Function Listener
`<sap:function-listener>`

Source that listens for incoming BAPI functions.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Gateway Host a| String |  Name of the host running the gateway server. |  | x
| Gateway Service a| String |  Either the name or service port for the gateway service of the SAP system. |  | x
| Program ID a| String |  SAP system program ID that is registered on the gateway. Must be unique for the given gateway. |  | x
| Connection Count a| Number |  The number of connections to register on the gateway. |  1 |
| Targeted Function a| String |  Filters the incoming BAPI functions by their name. The name of the function you want to receive. |  |
| Transactional Action a| Enumeration, one of:

** ALWAYS_BEGIN
** NONE |  The type of beginning action that sources can take regarding transactions. |  NONE |
| Transaction Type a| Enumeration, one of:

** LOCAL
** XA |  The type of transaction to create. Availability depends on Mule version. |  LOCAL |
| Primary Node Only a| Boolean |  Whether this source should only be executed on the primary node when running in a cluster. |  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
| Response a| Binary |  |  #[payload] |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<SapAttributes>>
|===

=== For Configurations
* <<sap>>

== Operations

* <<asyncRfc>>
* <<confirmTransactionId>>
* <<getFunction>>
* <<retrieveIdoc>>
* <<send>>
* <<startsaptransaction>>
* <<syncRfc>>

[[asyncRfc]]
=== Asynchronous Remote Function Call
`<sap:async-rfc>`

Executes a BAPIFunction over a queued Remote Function Call (qRFC). A queued RFC is an extension of a transactional RFC (tRFC) that ensures that individual steps are processed in sequence.

To guarantee that multiple Logical Unit of Work (LUWs) transactions are processed in the order specified by the application. tRFC can be serialized using inbound and outbound queues; hence the name queued RFC (qRFC).  qRFC is best used as an extension of tRFC to define a processing sequence. Use qRFC to guarantee that several transactions are processed in a predefined order.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Function Name a| String |  The name of the function to execute |  | x
| Content a| Binary |  The BAPIFunction to execute |  #[payload] |
| Transaction Id a| String |  The ID that identifies an RFC so it runs only once. |  | x
| Queue Name a| String |  Name of the queue on which the RFC executes. This applies for qRFC since each tRFC call that is processed is given a queue name by the application. A queue name and version are required for each qRFC transaction. |  |
| IDoc Parsing Options a| <<IDocParseParameterGroup>> | IDoc parsing options | |
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== For Configurations
* <<sap>>

==== Throws
* SAP:CONNECTIVITY
* SAP:INVALID_CACHE
* SAP:INVALID_INPUT
* SAP:METADATA_UNAVAILABLE
* SAP:NOT_FOUND
* SAP:NOT_SUPPORTED
* SAP:PARSING
* SAP:RETRY_EXHAUSTED
* SAP:SYSTEM_BUSY
* SAP:TIMEOUT


[[confirmTransactionId]]
=== Confirm Transaction
`<sap:confirm-transaction-id>`

Confirms a determined transaction.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Transaction ID (TID) a| String |  The ID of the transaction to confirm. |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===


=== For Configurations
* <<sap>>

==== Throws
* SAP:CONNECTIVITY
* SAP:RETRY_EXHAUSTED

[[getFunction]]
=== Get Function
`<sap:get-function>`

Retrieves a BAPIFunction based on its name.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Function Name a| String |  The name of the function to retrieve |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<sap>>

==== Throws
* SAP:CONNECTIVITY
* SAP:INVALID_CACHE
* SAP:INVALID_INPUT
* SAP:METADATA_UNAVAILABLE
* SAP:NOT_FOUND
* SAP:NOT_SUPPORTED
* SAP:PARSING
* SAP:RETRY_EXHAUSTED
* SAP:SYSTEM_BUSY
* SAP:TIMEOUT

[[retrieveIdoc]]
=== Retrieve IDoc
`<sap:retrieve-idoc>`

Retrieves an IDoc structure based on its key.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| IDoc Name a| String |  The key that contains the required information to retrieve the IDocument. |  | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<sap>>

==== Throws
* SAP:CONNECTIVITY
* SAP:INVALID_CACHE
* SAP:INVALID_INPUT
* SAP:METADATA_UNAVAILABLE
* SAP:NOT_FOUND
* SAP:NOT_SUPPORTED
* SAP:PARSING
* SAP:RETRY_EXHAUSTED
* SAP:SYSTEM_BUSY
* SAP:TIMEOUT

[[send]]
=== Send IDoc
`<sap:send>`

Sends an IDocument to SAP over an RFC. An RFC can be one of two types for IDocuments:

* Transactional (tRFC): A tRFC is a special form of asynchronous Remote Function Call (aRFC). Transactional RFC ensures transaction-like handling of processing steps that were originally handled autonomously. tRFC is an asynchronous communication method that executes the called function module in the RFC server only once, even if the data is sent multiple times due to some network issue. The remote system need not be available at the time the RFC client program is executing a tRFC.  The tRFC component stores the called RFC function, together with the corresponding data, in the SAP database under a unique transaction ID (TID). tRFC is similar to aRFC in that it does not wait at the target system (similar to a registered post). If the system is not available, the data is written into aRFC tables with a transaction ID (SM58) that is chosen by the scheduler RSARFCSE and run every 60 seconds.  tRFC is best used as an extension of asynchronous RFC secure communication between systems.

* Queued (qRFC): A queued RFC is an extension of tRFC. It also ensures that individual steps are processed in sequence. Use qRFC to guarantee that multiple LUWs (Logical Unit of Work transactions) are processed in the order specified by the application. tRFC can be serialized using inbound and outbound queues, hence the name queued RFC (qRFC).  qRFC is best used as an extension of tRFC to define a processing sequence.  Implement qRFC if you want to guarantee that several transactions are processed in a predefined order.

Both tRFC and qRFC have a TID handler.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| IDoc Name a| String |  The name of the iDocument to execute. |  | x
| Content a| Binary |  The IDocument to execute. |  #[payload] |
| Version a| String |  The version on the IDoc. |  |
| Transaction Id a| String |  The ID that identifies an RFC so it runs only once. |  |
| Queue Name a| String |  Name of the queue on which the RFC executes. This applies for qRFC since each tRFC call that is processed is given a queue name by the application. A queue name and version are required for each qRFC transaction. |  |
| IDoc Parsing Options a| <<IDocParseParameterGroup>> | | |
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== For Configurations
* <<sap>>

==== Throws
* SAP:CONNECTIVITY
* SAP:INVALID_CACHE
* SAP:INVALID_INPUT
* SAP:METADATA_UNAVAILABLE
* SAP:NOT_FOUND
* SAP:NOT_SUPPORTED
* SAP:PARSING
* SAP:RETRY_EXHAUSTED
* SAP:SYSTEM_BUSY
* SAP:TIMEOUT

[[startsaptransaction]]
=== Start SAP Transaction
`<sap:create-transaction-id>`

Creates a transaction ID to use as part of future calls.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

=== For Configurations
* <<sap>>

==== Throws
* SAP:CONNECTIVITY
* SAP:INVALID_CACHE
* SAP:INVALID_INPUT
* SAP:METADATA_UNAVAILABLE
* SAP:NOT_FOUND
* SAP:NOT_SUPPORTED
* SAP:PARSING
* SAP:RETRY_EXHAUSTED
* SAP:SYSTEM_BUSY
* SAP:TIMEOUT


[[syncRfc]]
=== Synchronous Remote Function Call
`<sap:sync-rfc>`

Executes a BAPIFunction over a synchronous remote function call (sRFC). A synchronous RFC requires both the systems (client and server) to be available at the time of communication or data transfer. sRFC is the most common type and is used when a result is required immediately after the execution of sRFC.  sRFC is a means of communication between systems where acknowledgments are required.

The resources of the source system wait at the target system and ensure that they deliver the message or data with ACKD. The Data is consistent and reliable for communication.  If the target system is not available, the source system resources wait until the target system is available. This can lead to the processes of the source system going into Sleep/RFC/CPIC mode at the target systems, which blocks these resources.  Use sRFC for communication between systems, and communication between an SAP web application server and an SAP GUI.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Function Name a| String |  The name of the function to execute. |  | x
| Content a| Binary |  The BAPIFunction to execute. |  #[payload] |
| Transactional Action a| Enumeration, one of:

** ALWAYS_JOIN
** JOIN_IF_POSSIBLE
** NOT_SUPPORTED |  The type of joining action that operations can take regarding transactions. |  JOIN_IF_POSSIBLE |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable in which to store the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
|===

=== For Configurations
* <<sap>>

==== Throws
* SAP:CONNECTIVITY
* SAP:INVALID_CACHE
* SAP:INVALID_INPUT
* SAP:METADATA_UNAVAILABLE
* SAP:NOT_FOUND
* SAP:NOT_SUPPORTED
* SAP:PARSING
* SAP:RETRY_EXHAUSTED
* SAP:SYSTEM_BUSY
* SAP:TIMEOUT

== Types

[[MessageServer]]
=== Message Server

A message server can be configured with multiple gateways and can be passed to the *Document Listener* source to distribute the load and improve performance.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | The host of the message server. |  | x
| System Id a| String | System ID of the SAP system. |  | x
| Port a| Number | The port with which the connector will log into the message server. |  |
| Group a| String | Group of SAP application servers. |  |
| Router a| String | SAP router string to use for a system protected by a firewall. |  |
|===

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds). | |
| Count a| Number | The number of reconnection attempts to make. | |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute. |  |
|===

[[SapAttributes]]
=== SAP Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Transaction Id a| String |Transaction ID value.  |  |
|===

[[IDocRenderParameterGroup]]
=== IDoc Render Parameter Group

IDoc rendering options

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Render IDoc Empty Tags a| Boolean | Indicates whether to include all empty tags in the resulting XML document | false |
| Render IDoc Ignore Invalid Char Errors a| Boolean | Indicates whether to ignore character range check errors in accordance with the used XML specification version | false |
| Render IDoc Ignore Tag Escape Errors a| Boolean | Indicates whether to ignore escape character errors within XML tags in accordance with the used IDocXML format | false |
| Render IDoc Omit Xml Declaration a| Boolean | Indicates whether to omit the XML declaration section in the resulting XML document | false |
| Render IDoc Optional Encoding Decl a| Boolean | Indicates whether to write an optional XML encoding declaration attribute into the resulting XML document | false |
| Render IDoc Substitute Invalid Chars a| Boolean | Indicates whether to substitute invalid characters within IDoc field values with the number sign `#` (`U+0023`) | false |
| Render IDoc With CR a| Boolean | Indicates whether to insert `CR` (Carriage Return) characters into the resulting XML document | false |
| Render IDoc With CRLF a| Boolean | Indicates whether to insert `CR+LF` (Carriage Return and Line Feed) characters into the resulting XML document | false |
| Render IDoc With LF a| Boolean | Indicates whether to insert `LF` (Line Feed) characters into the resulting XML document | false |
| Render IDoc With Tabs And CR a| Boolean | Indicates whether to insert `TAB` and `CR` (Tab and Carriage Return) characters into the resulting XML document | false |
| Render IDoc With Tabs And CRLF a| Boolean | Indicates whether to insert `TAB` and `CR+LF` (Tab, Carriage Return and Line Feed) characters into the resulting XML document | false |
| Render IDoc With Tabs And LF a| Boolean | Indicates whether to insert `TAB` and `LF` (Tab and Line Feed) characters into the resulting XML document | false |
| Render IDoc Xml10 a| Boolean | Indicates whether to create an XML document compliant with XML specification version 1.0 | false |
| Render IDoc Xml11 a| Boolean | Indicates whether to create an XML document compliant with XML specification version 1.1 | false |
|======================

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

When streaming in this mode, Mule never uses the disk to buffer the contents. If you exceed the buffer size, the message fails.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory to allocate to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to *Buffer Size Increment*, with an upper limit of *Max Buffer Size*. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed. |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

File store repeatable streams require buffering, and there are different buffering strategies. Mule keeps a portion of contents in memory. If the stream contents are larger than the configured buffer size, Mule backs up the buffer’s content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed. |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message. |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is SHA-256. |  |
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property may only be set if useSecureHash is `false`. |  |
| Object Store a| Object Store | The object store where the redelivery counter for each message is stored. |  |
|===

[[IDocParseParameterGroup]]
=== IDoc Parse Parameter Group

IDoc parsing options

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Parse With Field Value Checking a| Boolean | Indicates whether to enable the field value checking mechanism in accordance with the respective IDoc field metadata when parsing | false |
| Parse Ignore Unknown Fields a| Boolean | Indicates whether to ignore unknown fields when parsing, for example, when parsing with older IDoc metadata | false |
| Parse Ignore Invalid Char Errors a| Boolean | Indicates whether to ignore character range check errors in accordance with the declared XML specification version when parsing.
When using this option, invalid characters within field values are accepted, although the XML document to parse might contain characters that are not in the valid character range. | false |
| Parse Without Field Data Type Checking a| Boolean | Indicates whether to disable the field data type checking mechanism in accordance with the respective IDoc field metadata when parsing.
{sp} +
{sp} +
*Caution*: Use this option with care.
Sending IDocs with illegal field contents that violate the field's defined datatype can cause ABAP system dumps and result in unrecognized partial loss of data when processed in an AS ABAP system. | false |
| Parse Refuse Unknown XML Version a| Boolean | Indicates whether to refuse XML documents that declare an unknown XML specification version, for example, a potential future XML specification version 1.2 or 2.0 | false |
| Parse Refuse XML Version10 a| Boolean | Indicates whether to refuse XML documents that don't use XML specification version 1.0 or that don't contain an XML declaration header | false |
| Parse Refuse XML Version11 a| Boolean | Indicates whether to refuse XML documents that use XML specification version 1.1 | false |
| Parse Accept Only Xml Version10 a| Boolean | Indicates whether to accept only XML documents that use XML specification version 1.0 or that don't contain an XML declaration header | false |
| Parse Accept Only Xml Version11 a| Boolean | Indicates whether to accept only XML documents that use XML specification version 1.1 or that don't contain an XML declaration header | false |
| Parse Accept Only Xml Version10 To11 a| Boolean | Indicates whether to accept only XML documents that use XML specification version 1.0 or 1.1 or that don't contain an XML declaration header | false |
|======================

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
